--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,50 @@
-a{
-  text-decoration: none;
-  transition: all .2s ease;
-}
 
 a:visited{
   color: black;
 }
-
 a:hover{
-  color: blue;
+  color: green;
   transform: scale(1.1);
+}
 
+.navbar{
+  position: static;
+  top: 0;
+  width: 100%;
+  height: 300px;
+  background-color: red;
+}
+
+.navbar a{
+  text-decoration: none;
+  transition: all .2s ease;
+}
+
+.navBtn{
+  text-align: center;
+  display: inline;
+  float: right;
+  padding: 12px;
+  margin: 8px;
+}
+
+#btn{
+  margin: 8px;
+  padding: 8px;
+  border: solid black;
+  border-radius: 20px;
+}
+
+.navbar h1{
+  font-weight: bold;
+  padding-left: 30px;
+}
+
+.outlet{
+  position: relative;
+  bottom: 0;
+  background-color: red;
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
 }
