almost done with landing page, adding background and lorem ipsum;

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,23 @@
-
+a{
+  text-decoration: none;
+}
 a:visited{
   color: black;
 }
 a:hover{
   color: green;
-  transform: scale(1.1);
+  text-decoration: none;
 }
 
 .navbar{
   position: static;
   top: 0;
   width: 100%;
-  height: 300px;
-  background-color: red;
+  height: 110px;
+  border-bottom: solid 1px;
 }
 
 .navbar a{
-  text-decoration: none;
   transition: all .2s ease;
 }
 
@@ -43,8 +44,32 @@ a:hover{
 .outlet{
   position: relative;
   bottom: 0;
-  background-color: red;
   margin-top: 200px;
   display: flex;
   justify-content: center;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  
+}
+
+.form #name, #password{
+  width: 90%;
+  height: 30px;
+  font-size: 18px;
+  margin: 5px;
+  
+}
+
+.form #btn{
+  align-self: center;
+  width: 50%;
+}
+
+.form span{
+  font-size: 10%;
+  float: right;
 }
