--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,16 @@ a:hover{
 }
 
 .navbar{
-  position: static;
+  position: fixed;
   top: 0;
+  left:0;
+  right: 0;
+  z-index: 1000;
   width: 100%;
-  height: 110px;
+  height: 130px;
   border-bottom: solid 1px;
+  overflow: hidden;
+  background-color:rgb(219, 209, 180);
 }
 
 .navbar a{
@@ -43,15 +48,16 @@ a:hover{
 
 .outlet{
   position: relative;
-  bottom: 0;
-  margin-top: 200px;
+  margin-top: 160px;
   display: flex;
   justify-content: center;
 }
 
 .form{
+  position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: 400px;
   
 }
@@ -75,4 +81,14 @@ a:hover{
 
 body{
   background: url(/src/assets/images/homepage.jpg) no-repeat center center fixed;
+}
+
+.home{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 0;
+}
+.first, .second, .third{
+  display: flex;
 }
