taking a break for now, logic is missing from login and register

--- a/src/App.css
+++ b/src/App.css
@@ -87,8 +87,7 @@ body{
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-left: 0;
+  padding: 40px;
+  width: 50%;
 }
-.first, .second, .third{
-  display: flex;
-}
+
